--- a/telegram_bot/requirements.txt
+++ b/telegram_bot/requirements.txt
@@ -6,6 +6,9 @@ aiogram==3.4.1
 # Для работы с переменными окружения
 python-dotenv==1.0.0
 
+# Для HTTP запросов к сайту
+requests==2.31.0
+
 # Для работы с Django (если запускаем бота отдельно)
 Django==5.2.4
 
@@ -25,7 +28,4 @@ Django==5.2.4
 # re уже встроен в Python
 
 # Для работы с JSON
-# json уже встроен в Python
-
-# Для работы с HTTP запросами (если понадобится)
-# requests==2.31.0 
+# json уже встроен в Python 
